--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,9 +17,25 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext.arch_version = "1.0.0-beta1"
+ext.support_version = "26.1.0"
+ext.dagger_version = "2.11"
+ext.junit_version = "4.12"
+ext.espresso_version = "2.2.2"
+ext.retrofit_version = "2.2.0"
+ext.mockwebserver_version = "3.6.0"
+ext.apache_commons_version = "2.5"
+ext.mockito_version = "2.7.19"
+ext.constraint_layout_version = "1.0.2"
+ext.glide_version = "3.7.0"
+ext.timber_version = "4.5.1"
