--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,28 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xerofox.fileviewer">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
-        android:name=".App"
-        android:allowBackup="true"
+        android:name=".ViewerApp"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ui.SplashActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.InitializationActivity"
-            android:label="@string/title_activity_initialization" />
     </application>
 
 </manifest>
