--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -44,7 +45,6 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$support_version"
     compile "com.android.support:cardview-v7:$support_version"
     compile "com.android.support:design:$support_version"
-    compile "android.arch.persistence.room:runtime:$arch_version"
     compile "android.arch.lifecycle:runtime:$arch_version"
     compile "android.arch.lifecycle:extensions:$arch_version"
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -56,11 +56,8 @@ dependencies {
     compile "com.google.dagger:dagger-android-support:$dagger_version"
     compile "com.android.support.constraint:constraint-layout:$constraint_layout_version"
 
-    compile "com.jakewharton.timber:timber:$timber_version"
-
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
     annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
 
 }
