--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext.arch_version = "1.0.0-beta1"
+ext.arch_version = "1.0.0"
 ext.support_version = "26.1.0"
 ext.dagger_version = "2.11"
 ext.junit_version = "4.12"
