--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
     }
     defaultConfig {
         applicationId "com.xerofox.fileviewer"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
