--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
 
+    compile 'com.elvishew:xlog:1.4.0'
+
 }
